# yolo26_noetic

./: CLAUDE.md  Dockerfile  README-e.md  README.md  compose.yaml  entrypoint.sh
catkin_ws/src/yolo26_ros1/: CMakeLists.txt  package.xml
catkin_ws/src/yolo26_ros1/config/: yolo26.yaml
catkin_ws/src/yolo26_ros1/launch/: usbcam_yolo26.launch  xtion_yolo26.launch  yolo26.launch
catkin_ws/src/yolo26_ros1/scripts/: yolo26_ros1_node.py
models/: classes.yaml
