<?xml version="1.0"?>
<package format="2">
  <name>yolo26_ros1</name>
  <version>0.2.0</version>
  <description>YOLO26 (Ultralytics) ROS1 node with tracking, smoothing, and hysteresis support.</description>

  <maintainer email="you@example.com">you</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- runtime deps -->
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>vision_msgs</depend>
  <depend>geometry_msgs</depend>

  <!-- For camera bringup -->
  <exec_depend>openni2_launch</exec_depend>

</package>
